--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
+# allow execution of rake db:migrate without modifying the repo content
+/db/schema.rb
 
 # Ignore all logfiles and tempfiles.
 /log/*
